crates/rome_js_formatter/tests/specs/prettier/typescript/class/constructor.ts.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
assertion_line: 125
expression: constructor.ts

---
# Input
```js
class foo {
  constructor(static a: number) {}
}

class foo {
  constructor(export a: number) {}
}

class A {
    'constructor': typeof A
    static Foo() {
        return new A()
    }
}

class B {
  constructor<>() {}
}

```

# Output
```js
class foo {
  constructor(static a: number) {}
}

class foo {
  constructor(export a: number) {}
}

class A {
  'constructor': typeof A
  static Foo() {
    return new A();
  }
}

class B {
  constructor<>() {}
}

```

# Errors
```
error[SyntaxError]: 'static' cannot appear on a parameter.
  ┌─ constructor.ts:2:15
  │
2 │   constructor(static a: number) {}
  │               ^^^^^^

error[SyntaxError]: expected a parameter but instead found 'export'
  ┌─ constructor.ts:6:15
  │
6 │   constructor(export a: number) {}
  │               ^^^^^^ Expected a parameter here

error[SyntaxError]: expected `,` but instead found `a`
  ┌─ constructor.ts:6:22
  │
6 │   constructor(export a: number) {}
  │                      ^ unexpected

error[SyntaxError]: class properties may not be called `constructor`
   ┌─ constructor.ts:10:5
   │
10 │     'constructor': typeof A
   │     ^^^^^^^^^^^^^^^^^^^^^^^

error[SyntaxError]: expected a type parameter but instead found '>'
   ┌─ constructor.ts:17:15
   │
17 │   constructor<>() {}
   │               ^ Expected a type parameter here

error[SyntaxError]: constructors cannot have type parameters.
   ┌─ constructor.ts:17:14
   │
17 │   constructor<>() {}
   │              ^^


```


